fix: removed overflow-x-scroll

--- a/resources/scss/admin/partials/_dashboard.scss
+++ b/resources/scss/admin/partials/_dashboard.scss
@@ -1,6 +1,5 @@
 .boo-wrapper{
   height: 100%;
-  overflow-x: scroll;
   border-radius: 2rem;
   background-color: white;
   padding: 1.5rem 3rem;
